--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,34 @@
 @font-face {
   font-family: "PT Sans Narrow";
-  src:url("../fonts/PT-Sans-Narrow-Web-Bold.ttf") format("truetype");
+  src: url("../fonts/PT-Sans-Narrow-Web-Bold.ttf") format("truetype");
+
+}
+
+* {
+	font-family:  "PT Sans Narrow", bold;
+	font-size: 14px;
+	color: f7f4f1;
+	line-height: 24px;
+}
+
+h2 {
+	font-family:  "PT Sans Narrow", bold;
+	font-size: 30px;
+	color: f7f4f1;
+	line-height: 42px;
+}
+
+h3 {
+	font-family:  "PT Sans Narrow", bold;
+	font-size: 30px;
+	color: f7f4f1;
+	line-height: 42px;
+}
+
+.feauteres, .footer-copyright, .footer-social {
+	text-align: center;
+}
+
+.news, .gallery, .contacts, .appointment {
+	color: 000000;
 }
