--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 @font-face {
   font-family: "PT Sans Narrow";
   src: url("../fonts/PT-Sans-Narrow-Web-Bold.ttf") format("truetype");
-
 }
 
 * {
@@ -9,6 +8,7 @@
 	font-size: 14px;
 	color: f7f4f1;
 	line-height: 24px;
+	text-transform: capitalize;
 }
 
 h2 {
@@ -16,6 +16,7 @@ h2 {
 	font-size: 30px;
 	color: f7f4f1;
 	line-height: 42px;
+	text-transform: capitalize;
 }
 
 h3 {
@@ -23,6 +24,7 @@ h3 {
 	font-size: 30px;
 	color: f7f4f1;
 	line-height: 42px;
+	text-transform: capitalize;
 }
 
 .feauteres, .footer-copyright, .footer-social {
