--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 	font-size: 14px;
 	color: f7f4f1;
 	line-height: 24px;
-	text-transform: capitalize;
+	text-transform: uppercase;
 }
 
 h2 {
@@ -16,7 +16,7 @@ h2 {
 	font-size: 30px;
 	color: f7f4f1;
 	line-height: 42px;
-	text-transform: capitalize;
+	text-transform: uppercase;
 }
 
 h3 {
@@ -24,7 +24,7 @@ h3 {
 	font-size: 30px;
 	color: f7f4f1;
 	line-height: 42px;
-	text-transform: capitalize;
+	text-transform: uppercase;
 }
 
 .feauteres, .footer-copyright, .footer-social {
