--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 * {
-	font-family:  "PT Sans Narrow", bold;
+	font-family:  "PT Sans Narrow", normal;
 	font-size: 14px;
 	color: f7f4f1;
 	line-height: 24px;
@@ -12,7 +12,7 @@
 }
 
 h2 {
-	font-family:  "PT Sans Narrow", bold;
+	font-family:  "PT Sans Narrow", normal;
 	font-size: 30px;
 	color: f7f4f1;
 	line-height: 42px;
@@ -20,7 +20,7 @@ h2 {
 }
 
 h3 {
-	font-family:  "PT Sans Narrow", bold;
+	font-family:  "PT Sans Narrow", normal;
 	font-size: 30px;
 	color: f7f4f1;
 	line-height: 42px;
