--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ h3 {
 	text-transform: uppercase;
 }
 
-.feauteres, .footer-copyright, .footer-social {
+.feature-item, .footer-copyright, .footer-social {
 	text-align: center;
 }
 
