--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,18 @@ h3 {
 .news, .gallery, .contacts, .appointment {
 	color: 000000;
 }
+
+.visually-hidden { 
+    position: absolute !important;
+    height: 1px; width: 1px; 
+    overflow: hidden;
+    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+    clip: rect(1px, 1px, 1px, 1px);
+}
+
+.visually-hidden a:focus,
+.visually-hidden input:focus,
+.visually-hidden button:focus { 
+    position:static; 
+    width:auto; height:auto;  
+}
