--- a/css/style.css
+++ b/css/style.css
@@ -36,16 +36,12 @@ h3 {
 }
 
 .visually-hidden { 
-    position: absolute !important;
-    height: 1px; width: 1px; 
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
     overflow: hidden;
-    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-    clip: rect(1px, 1px, 1px, 1px);
-}
-
-.visually-hidden a:focus,
-.visually-hidden input:focus,
-.visually-hidden button:focus { 
-    position:static; 
-    width:auto; height:auto;  
 }
