--- a/Barbershop/css/style.css
+++ b/Barbershop/css/style.css
@@ -35,19 +35,9 @@ h3 {
 	color: 000000;
 }
 
-ul {
+.site-navigation {
     padding: 0;
     list-style-type: none;
-}
-
-.checkbox-list {
-    padding: 40px;
-    list-style-type: disc;
-}
-
-.radio-list {
-    padding: 40px;
-    list-style-type: disc;
 }
 
 .visually-hidden { 
