--- a/Barbershop/css/style.css
+++ b/Barbershop/css/style.css
@@ -75,6 +75,16 @@ h3 {
     list-style-type: none;
 }
 
+.product-equipment {
+    padding: 0;
+    list-style-type: none;
+}
+
+.product-photo-preview {
+    padding: 0;
+    list-style-type: none;
+}
+
 .visually-hidden { 
     position: absolute;
     width: 1px;
