--- a/Barbershop/css/style.css
+++ b/Barbershop/css/style.css
@@ -35,7 +35,12 @@ h3 {
 	color: 000000;
 }
 
-.site-navigation {
+ul {
+    padding: 0;
+    list-style-type: none;
+}
+
+/*.site-navigation {
     padding: 0;
     list-style-type: none;
 }
@@ -83,7 +88,7 @@ h3 {
 .product-photo-preview {
     padding: 0;
     list-style-type: none;
-}
+}*/
 
 .visually-hidden { 
     position: absolute;
