--- a/Barbershop/css/style.css
+++ b/Barbershop/css/style.css
@@ -9,7 +9,7 @@ body {
 	text-transform: uppercase;
 
 	background-color: #000000;
-	background-image: url(../Barbershop/img/Background-main.jpg);
+	background-image: url("../Barbershop/img/Background-main.jpg");
 	background-position: top center;
 	background-repeat: no-repeat;
 }
@@ -41,6 +41,64 @@ a {
 .user-navigation a:hover,
 .user-navigation a:focus {
 	background-color: #242424;
+}
+
+.features-list {
+	list-style: none;
+}
+
+.feature-item {
+	text-align: center;
+}
+
+.feature-item h3{
+	font-size: 30px;
+	line-height: 42px;
+}
+
+.index-columns {
+	color: #000000;
+
+	background-color: #f8f5f2;
+	background-image: url("../Barbershop/img/Background-news.jpg");
+	background-position: 0 0;
+	background-repeat: repeat;  
+}
+
+.index-columns h2{
+	font-size: 30px;
+	line-height: 42px;
+}
+
+.news-list {
+	list-style: none;
+}
+
+.news-item time{
+	text-transform: none;
+}
+
+.gallery-content {
+	background-color: #cccccc;
+	border: 7px solid #ffffff;
+}
+
+.button {
+	font: inherit;
+
+	text-align: center;
+	color: #ffffff;
+	vertical-align: middle;
+	text-transform: uppercase;
+
+	background-color: #000000;
+	border: none;
+}
+
+.button:hover,
+.button:focus,
+.button:active {
+	background-color: #663d15;
 }
 
 /*@font-face {
