--- a/Nerds/css/style.css
+++ b/Nerds/css/style.css
@@ -1,140 +1,131 @@
-@font-face {
-  font-family: "Roboto";
-  src: url("../Nerds/fonts/Roboto-regular.woff") format("woff"),
-  url("../Nerds/fonts/Roboto-regular.woff2") format("woff2"),
-  url("../Nerds/fonts/Roboto-Regular.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../Nerds/fonts/Roboto-Medium.woff") format("woff"),
-  url("../Nerds/fonts/Roboto-Medium.woff2") format("woff2"),
-  url("../Nerds/fonts/Roboto-Medium.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Roboto";
-  src: url("../Nerds/fonts/Roboto-Bold.woff") format("woff"),
-  url("../Nerds/fonts/Roboto-Bold.woff2") format("woff2"),
-  url("../Nerds/fonts/Roboto-Bold.ttf") format("truetype");
-}
-
-* {
-	font-family:  "Roboto-regular", normal;
+body {
+	margin: 0;
+	padding: 0;
+	font-family: "Roboto", Arial, sans-serif;
 	font-size: 16px;
-	color: 283136;
 	line-height: 24px;
+	font-weight: 400;
+	color: #283136;
+	text-transform: none;
+
+	background-color: #ffffff;
+	background-position: 0 0;
+	background-repeat: repeat;
+}
+
+a {
+	text-decoration: none;
 }
 
 .site-navigation {
-	font-family:  "Roboto-Medium", normal;
+	font-weight: 500;
 	font-size: 16px;
-	color: 000000;
+	color: #000000;
 	line-height: 30px;
 	text-transform: uppercase;
 }
 
 .slider-header, .catalog-heading {
-	font-family:  "Roboto-Medium", normal;
+	font-weight: 500;
 	font-size: 55px;
-	color: 000000;
+	color: #000000;
 	line-height: 55px;
 	text-transform: none;
 }
 
 .product-header {
-	font-family:  "Roboto-Bold", normal;
+	font-weight: 700;
 	font-size: 24px;
-	color: 000000;
+	color: #000000;
 	line-height: 30px;
 	text-transform: uppercase;
 }
 
 .presentation-header {
-	font-family:  "Roboto-Medium", normal;
+	font-weight: 500;
 	font-size: 45px;
-	color: 000000;
+	color: #000000;
 	line-height: 45px;
 	text-transform: none;
 }
 
 .presentation-underheader-1, .presentation-underheader-2 {
-	font-family:  "Roboto-Bold", normal;
+	font-weight: 700;
 	font-size: 16px;
-	color: 000000;
+	color: #000000;
 	line-height: 24px;
 	text-transform: uppercase;
 }
 
 .advantages-list-value {
-	font-family:  "Roboto-Bold", normal;
+	font-weight: 700;
 	font-size: 45px;
-	color: 000000;
+	color: #000000;
 	line-height: 10.06px;
 	text-transform: none;
 }
 
 .advantages-list-text {
-	font-family:  "Roboto-regular", normal;
+	font-weight: 400;
 	font-size: 16px;
-	color: 283136;
+	color: #283136;
 	line-height: 28px;
 	text-transform: none;
 }
 
 .map-hover {
-	font-family:  "Roboto-regular", normal;
+	font-weight: 400;
 	font-size: 16px;
-	color: 666666;
+	color: #666666;
 	line-height: 18px;
 	text-transform: none;
 }
 
 .map-header, .price-value-slider, .radio-header, .checkbox-header, .filter-results-heading {
-	font-family:  "Roboto-Bold", normal;
+	font-weight: 700;
 	font-size: 18px;
-	color: 000000;
+	color: #000000;
 	line-height: 30px;
 	text-transform: uppercase;
 }
 
 .social-header {
-	font-family:  "Roboto-Bold", normal;
+	font-weight: 700;
 	font-size: 36px;
-	color: 000000;
+	color: #000000;
 	line-height: 36px;
 	text-transform: none;
 }
 
 .social-text {
-	font-family:  "Roboto-regular", normal;
+	font-weight: 400;
 	font-size: 16px;
-	color: 444444;
+	color: #444444;
 	line-height: 22px;
 	text-transform: none;
 }
 
 .filter-option {
-	font-family:  "Roboto-regular", normal;
+	font-weight: 400;
 	font-size: 16px;
-	color: 283136;
+	color: #283136;
 	line-height: 20px;
 	text-transform: none;
 }
 
 .filter-results-options {
-	font-family:  "Roboto-regular", normal;
+	font-weight: 400;
 	font-size: 14px;
-	color: 000000;
+	color: #000000;
 	line-height: 18px;
 	text-transform: uppercase;
 	opacity: 0.3;
 }
 
 .pagination-item-current {
-	font-family:  "Roboto-regular", normal;
+	font-weight: 400;
 	font-size: 14px;
-	color: 000000;
+	color: #000000;
 	line-height: 18px;
 	text-transform: uppercase;
 	opacity: 1;
@@ -150,9 +141,4 @@
     padding: 0;
     clip: rect(0 0 0 0);
     overflow: hidden;
-}
-
-ul {
-    padding: 0;
-    list-style-type: none;
 }
